⚡️ fixed overflow x

--- a/workspaces/www.monalisatalk-fan.site/pages/_app.module.css
+++ b/workspaces/www.monalisatalk-fan.site/pages/_app.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: calc(var(--vh, 1vh) * 100);
+  overflow-x: hidden;
   overflow-y: var(--body-scroll, auto);
 
   & > .footer {
